# moon

./: .gitignore  CMakeLists.txt  README.md  package_release.bat
app/: CMakeLists.txt
app/include/: AppConfig.h  AppController.h  BackendProcessManager.h  BootstrapCoordinator.h  CommandIDs.h  MainComponent.h  MainWindow.h  SplashWindow.h
app/resources/: moon_icon.rc
app/src/: AppController.cpp  BackendProcessManager.cpp  BootstrapCoordinator.cpp  MainComponent.cpp  MainWindow.cpp  SplashWindow.cpp  main.cpp
backend/: main.py  run_backend.bat
backend/app/: __init__.py  audio_utils.py  cache_manager.py  config.py  job_store.py  models.py  schemas.py
backend/app/routes/: health.py  jobs.py  models.py
backend/app/services/: ace_step_service.py  add_layer_service.py  demucs_service.py  music_generation_service.py  rewrite_service.py  stems_service.py
cmake/: Packaging.cmake
data/models/catalog/: ace-step-vocal2bgm.json  ace-step.json
data/models/manifests/: installed_models.json
docs/: api_contract.md  architecture.md  project_format.md  release_checklist.md  windows_handoff.md
engine/: CMakeLists.txt
engine/include/: AIJobClient.h  ArrangementBackend.h  ClipOperations.h  EngineRuntimeCoordinator.h  ExportService.h  FileHash.h  LocalJobClient.h  Logger.h  ModelManager.h  MusicGeneration.h  ProjectManager.h  ProjectState.h  SessionSerializer.h  SettingsService.h  TaskManager.h  TimelineFacade.h  TracktionSyncBridge.h  TransportFacade.h  WaveformAnalyzer.h  WaveformData.h  WaveformDiskCache.h  WaveformPersistentCache.h  WaveformService.h
engine/src/: AIJobClient.cpp  ArrangementBackend.cpp  ClipOperations.cpp  EngineRuntimeCoordinator.cpp  ExportService.cpp  FileHash.cpp  LocalJobClient.cpp  Logger.cpp  ModelManager.cpp  ProjectManager.cpp  SessionSerializer.cpp  SettingsService.cpp  TaskManager.cpp  TimelineFacade.cpp  TracktionSyncBridge.cpp  TransportFacade.cpp  WaveformAnalyzer.cpp  WaveformDiskCache.cpp  WaveformService.cpp
ui/: CMakeLists.txt
ui/include/: AIGenerationPanel.h  InspectorPanel.h  ModelManagerPanel.h  RegionSelectionOverlay.h  TaskPanel.h  TimelineLayout.h  TimelineView.h  TrackListView.h  TransportBar.h  WaveformClipView.h  WaveformRenderer.h
ui/src/: AIGenerationPanel.cpp  InspectorPanel.cpp  ModelManagerPanel.cpp  RegionSelectionOverlay.cpp  TaskPanel.cpp  TimelineView.cpp  TrackListView.cpp  TransportBar.cpp  WaveformClipView.cpp  WaveformRenderer.cpp
